# areweminkanyet

./: .editorconfig  .gitignore  138.bootstrap.js  CNAME  Cargo.toml  README.md  bootstrap.js  devenv.nix
.github/workflows/: deploy.yml
src/: lib.rs  utils.rs
www/: package.json
www/src/: index.html  index.js
